@@ -100,7 +100,7 @@ public class PyDefaultDict extends PyDictionary {
             PyObject[] ob = {defaultFactory};
             args = new PyTuple(ob);
         }
-        return new PyTuple(getType(), args, Py.None, Py.None, items());
+        return new PyTuple(getType(), args, Py.None, Py.None, iteritems());
     }
 
     @Override
